nft contract removed, styles gap fixes

--- a/packages/apps/src/apps.scss
+++ b/packages/apps/src/apps.scss
@@ -49,7 +49,7 @@
 }
 
 .user-icon {
-  display: none; 
+  display: none;
 }
 
 .mark {
@@ -523,7 +523,7 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1023px) {
   .app-wrapper {
     background-color: var(--card-background);
   }
@@ -561,7 +561,7 @@
 
 @media (max-width: 767px) {
   .app-main {
-    margin-top: 54px;
+    margin-top: 85px;
 
     &.no-accounts {
       margin-top: 67px;
@@ -580,7 +580,7 @@
   }
 
   .menu-mobile {
-    margin-top: 54px;
+    margin-top: 85px;
 
     &.no-accounts {
       margin-top: 67px;
@@ -588,7 +588,7 @@
   }
 
   .manage-accounts {
-    margin-top: 54px;
+    margin-top: 85px;
   }
 
   .welcome {
@@ -605,7 +605,7 @@
   }
 
   .user-icon {
-    display: block; 
+    display: block;
   }
 
   .menu-arrow {
