--- a/packages/apps/styles/global.scss
+++ b/packages/apps/styles/global.scss
@@ -750,7 +750,7 @@ button.ui.button, .button-link, .ui--Button {
   background-color: rgba(0, 0, 0, 0.7) !important;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1023px) {
   h1.ui.header {
     margin-top: calc(var(--gap) * 1.5) !important;
     padding: 0 var(--gap);
