--- a/packages/page-builder/src/components/CollectionCard/styles.scss
+++ b/packages/page-builder/src/components/CollectionCard/styles.scss
@@ -114,6 +114,9 @@
 
 @media (max-width: 768px) {
   .collection-card {
+    padding-left: 0;
+    padding-right: 0;
+
     display: flex;
     flex-direction: column;
     gap: var(--gap);
